Fixed scrollbar

--- a/css/all.css
+++ b/css/all.css
@@ -1,3 +1,7 @@
+html {
+	overflow: hidden;
+}
+
 html, body, ul, li, table {
 	margin: 0;
 	padding: 0;
